# bachelorProject

./: .gitignore  README.md  ReadPLY.cxx  variables
ReadPLY/: ReadPLY.cxx
ReadPLY/src/: ReadPLY.cxx
ReadVTK/src/: CMakeLists.txt  ReadPLY.cxx  ReadVTK.cxx
adaptive_voxel_size/src/: CMakeLists.txt  adaptive_voxel_size.cpp
colored_octree/src/: CMakeLists.txt  colored_octree.cpp
octree_pc_reader/src/: CMakeLists.txt  octree_pc_reader.cpp
pcl_load/src/: CMakeLists.txt  pcl_load.cpp
pcl_octree_grid/src/: CMakeLists.txt  pcl_octree_grid.cpp
pcl_preprocessing/src/: CMakeLists.txt  pcl_preprocessing.cpp
qualityAssessment/src/: CMakeLists.txt  qualityAssessment.cxx  qualityAssessment.h  qualityAssessment.pro  qualityAssessment.ui  qualityAssessmentDriver.cxx
surface_recon/: CMakeLists.txt
surface_recon/src/: CMakeLists.txt  surface_recon.cpp
